# relicot

./: .gitignore  LICENSE  pyproject.toml
CoT/: cot_eval.py  cot_module.py  cot_parser.py  cot_prompts.py  cot_utils.py
CoT/prompts/: cot_default_ja.txt  cot_json_ja.txt  cot_sc_ja.txt
UQ/: __init__.py  prompts.py  uq_module.py
UQ/prompts/: kw_extract_ja.txt  se_true_false_probe_ja.txt
common/: prompts.py
halusearch/: __init__.py  prompts.py  runner.py
halusearch/prompts/: halu_answer_from_steps_ja.txt  halu_expand_ja.txt  halu_judge_ja.txt
note/: StepCo.ipynb  cotuq.ipynb  test.ipynb  test_relicot_cot_uq.ipynb
stepco/: __init__.py  prompts.py  runner.py
